# dns-resolver

./: .dockerignore  Cargo.toml  Dockerfile  README.md
src/: main.rs
src/service/: dns_resolver.rs
