[package]
name = "dns-resolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"]}
trust-dns-resolver = "0.23.2"
serde = { version = "1.0", features = ["derive"] }
warp = "0.3.6"
